support for commanduuid & lookup()

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "debug": "^3.1.0",
     "microtime": "^2.1.7",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^3.2.1"
   }
 }
